<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address:</string>
    <string name="password">Password:</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="store_name">Al Bundy\'s Shoes!</string>
    <string name="store_slogan">Sorry, We\'re Closed!</string>
    <string name="Instructions_button_text">Instructions</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">Where do you think you’re going? Aren’t you open?” Al: “Sorry, ma’am but unlike your mouth, we occasionally close</string>
    <string name="go_to_store_button">Go to store</string>
    <string name="add_shoe_title">Add a new shoe to inventory</string>
    <string name="save_button_text">Save</string>
    <string name="about_text_box">Marcy: “Why must you always be so negative?” Al: “Why did you cross the road?” \n</string>
    <string name="add_new_shoe">Add new shoe</string>
</resources>
